# w3b2-bridge

./: .gitignore  README.md  docker-compose.debug.yml
assets/: w3b2_bridge_program-keypair.json  Техническое задание_ W3B2_ The Web3-to-Web2 Bridge Protocol.md
w3b2-bridge-backend/data/events/: evt_1757787351817_q9nwehm6e.json  evt_1757787402571_9k7lhu2tc.json  evt_1757787403037_oi8m28zfk.json  evt_1757787786373_a2f0iayak.json  evt_1757787803332_4k1vahynv.json  evt_1757787803796_h1kzwzaf1.json  evt_1757787826440_8hxjguokz.json
w3b2-bridge-program/: README.md
w3b2-bridge-program/proto/: events.proto  gateway.proto  types.proto
w3b2-bridge-program/src/: errors.rs  events.rs  instructions.rs  lib.rs  protocol.rs  protocols.rs  sm_accounts.rs  state.rs
w3b2-bridge-program/tests/: admin.rs  core.rs  user.rs
w3b2-bridge-program/tests/instructions/: admin.rs  mod.rs  user.rs
w3b2-connector/: Cargo.toml  _build_  config.example.toml
w3b2-connector/idls/: w3b2_bridge_program.json
w3b2-connector/src/: catchup.rs  client.rs  config.rs  dispatcher.rs  grpc_server.rs  keystore.rs  lib.rs  listener.rs  live.rs  main.rs  storage.rs  synchronizer.rs  worker.rs
w3b2-connector/src/workers/: catchup.rs  live.rs  mod.rs  synchronizer.rs
w3b2-connector/tests/: chaincards.rs  program_instructions.rs
w3b2-gateway/: Cargo.toml  config.example.toml
w3b2-gateway/src/: cli.rs  config.rs  error.rs  grpc.rs  main.rs  storage.rs
w3b2-gateway/src/grpc/: mod.rs
