[package]
name = "w3b2-connector"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang.workspace = true
anyhow.workspace = true
bincode.workspace = true
borsh.workspace = true
serde.workspace = true
sled.workspace = true
solana-client.workspace = true
solana-rpc-client-api.workspace = true
solana-sdk.workspace = true
solana-transaction-status.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
w3b2-bridge-program.workspace = true

anchor-client = { version = "0.31.1", features = ["async"] }
base64 = "0.22.1"
tracing = "0.1.41"
async-trait = "0.1.89"
bip39 = { version = "2.2.0", features = ["rand"] }
secrecy = "0.10.3"
argon2 = "0.5.3"
aes-gcm = "0.10.3"
serde_json = "1.0.145"
zeroize = "1.8.1"
dashmap = "6.1.0"

[dev-dependencies]
dirs = "6.0.0"

# [build-dependencies]
# tonic-build = "0.11"
